--- a/dquartic_train_config.json
+++ b/dquartic_train_config.json
@@ -1,9 +1,8 @@
 {
     "data":{
         "parquet_directory": "data/",
-        "ms2_data_path": "data/gen_spec_lib.parquet",
-        "ms1_data_path": "data/report.parquet",
-        "raw_files": "path/to/raw_file.mzML",
+        "ms2_data_path": null,
+        "ms1_data_path": null,
         "normalize": "minmax"
     },
     "model":{
